# OpenGL

./: .gitignore
CMakeQml/: .gitignore  CMakeLists.txt  CMakePresets.json
CMakeQml/MainProject/: CMakeLists.txt  qml.qrc
CMakeQml/MainProject/.qtcreator/: project.json.qtds
CMakeQml/MainProject/inc/: ChartModel.h  DrawTestGL.h  EasyTableModel.h  MyProxyModel.h  MyTableModel.h  SerialTest.h  TableDataModel.h  UIControl.h
CMakeQml/MainProject/qml/: CustomRadius.qml  EasyTableWidget.qml  LabeledSlider.qml  LineItem.qml  LogShow.qml  Main.qml  MainControl.qml  MesDataModel.qml  MyButton.qml  MyGridView.qml  MyInputField.qml  MyListView.qml  MyTableView.qml  Page1.qml  Page2.qml  Page3.qml  Page4.qml  Page5.qml  Page6.qml  Page7.qml  Settings.qml  SettingsView.qml  WindowHead.qml
CMakeQml/MainProject/src/: CharModel.cpp  DrawTestGL.cpp  EasyTableModel.cpp  MyProxyModel.cpp  MyTableModel.cpp  SerialTest.cpp  TableDataModel.cpp  UIControl.cpp  main.cpp
CMakeQml/MainProject/src/bak/: UIControl.cpp  UIControl.h
CMakeQml/libs/: CMakeQml.exp  CMakeQml.lib  MainProject.exp  MainProject.lib
CMakeQml/src/: main.cpp
CmakeGL/: CMakeLists.txt  main.cpp
CmakeGL/src/: CmakeLists.txt  cmake_install.cmake
OpenGLStudy/: OpenGLStudy.sln
OpenGLStudy/OpenGLStudy/: Common.cpp  DemoText.cpp  DemoText.h  OpenGLStudy.cpp  OpenGLStudy.h  OpenGLStudy.qrc  OpenGLStudy.ui  OpenGLStudy.vcxproj  OpenGLStudy.vcxproj.filters  QtThreadInform.cpp  QtThreadInform.h  Shader.h  main.cpp
OpenGLStudy/OpenGLStudy/lib/soil2/lib/: soil2.lib
OpenGLStudy/OpenGLStudy/shaders/Circle/: CircleDemo1_f.glsl  CircleGrid_f.glsl  Circle_f.glsl  shader_f.glsl  shader_v.glsl
OpenGLStudy/OpenGLStudy/shaders/Rectangle/: CircleGridPixel_f.glsl  CircleGrid_f.glsl  Circle_f.glsl  Circle_v.glsl  shader_f.glsl  shader_v.glsl
OpenGLStudy/OpenGLStudy/shaders/Text/: shader_v.glsl
OpenGLStudy/OpenGLStudy/shaders/Vexture/: shader_f.glsl  shader_v.glsl
OpenGLStudy/OpenGLStudy/src/: Common.cpp  Common.h  DemoCircle.cpp  DemoCircle.h  DemoCircleBorder.cpp  DemoCircleRectangle.cpp  DemoLine.cpp  DemoRectangle.cpp  DemoRectangle.h  DemoVexture.cpp  DemoVexture.h
OpenGLStudy/cmake/: CMakeLists.txt  cmake_minimum_required(VERSION 3.cmake
